assets/css/style.css
/* ==========================
   CSS Top-Level Variables
   ========================== */
:root {
	font-size: 18px;
	box-sizing: border-box;

	/* modular scale */
	--ratio: 1.5;
	--s-5: calc(var(--s-4) / var(--ratio));
	--s-4: calc(var(--s-3) / var(--ratio));
	--s-3: calc(var(--s-2) / var(--ratio));
	--s-2: calc(var(--s-1) / var(--ratio));
	--s-1: calc(var(--s0) / var(--ratio));
	--s0: 1rem;
	--s1: calc(var(--s0) * var(--ratio));
	--s2: calc(var(--s1) * var(--ratio));
	--s3: calc(var(--s2) * var(--ratio));
	--s4: calc(var(--s3) * var(--ratio));
	--s5: calc(var(--s4) * var(--ratio));

	/* Color Palette */
	--color-primary: #1A1A1A;
	--color-secondary: #7f827d;
	--color-accent: #7f140a;
	--color-background: #ffffff;

	/* Typography */
	--font-serif: 'adobe-garamond-pro', 'Georgia',
		'Times New Roman',
		serif;

	--font-sans-serif: 'Inter',
		'Helvetica Neue',
		Helvetica,
		Arial,
		sans-serif;

	--line-length: 65ch;
	--golden-ratio: 1.6180339887;
}

* {
	margin: 0;
	padding: 0;
	color: var(--color-primary);
	box-sizing: border-box;
}

body {
	font-family: var(--font-sans-serif);
	line-height: var(--golden-ratio);
}

article>p,
article>ul,
article>hr {
	font-family: var(--font-serif);
	max-width: var(--line-length);
	font-size: var(--s1);
}


img {
	max-width: 100%;
	object-fit: cover;
}

ul {
	list-style-type: none;
	font-family: var(--font-serif);
}

h1,
h2 {
	font-family: var(--font-serif);
	color: var(--color-accent);
}

h3,
h4,
h5,
h6 {
	font-family: var(--font-sans-serif);
	text-transform: uppercase;
	color: var(--color-primary);
}

/* h1 { */
/* 	font-size: var(--s2); */
/* } */
/**/
h2 {
	font-size: var(--s2);
}

/**/
/* h3 { */
/* 	font-size: var(--s1); */
/* } */
/**/
/* h4 { */
/* 	font-size: var(--s0); */
/* } */


header+img {
	display: block;
	width: 100%;
	height: max(30vh, 250px);
	object-fit: cover;
	object-position: 100% 40%;
	filter: brightness(0.7);
}

body>header {
	background-color: var(--color-secondary);
}

body>header>nav {
	font-family: var(--font-sans-serif);
	text-transform: uppercase;
	color: var(--color-background);
	letter-spacing: var(--s-5);

	display: flex;
	flex-flow: row wrap;
	align-items: stretch;
	justify-content: center;
	margin-inline: var(--s0);
}

body>header>nav>div {
	display: flex;
	overflow-x: auto;
}

@media screen and (min-width: 126ch) {
	body>header>nav {
		justify-content: space-between;
	}
}

body>header h1 {
	font-family: var(--font-sans-serif);
	color: inherit;
	text-align: center;
}

body>header a {
	text-decoration: none;
	color: var(--color-background);
	background-color: var(--color-secondary);
}

body>header a:hover {
	background-color: var(--color-background);
	color: var(--color-secondary);
}

body>header>nav a {
	display: flex;
	align-items: center;
	font-size: var(--s0);
	padding: var(--s0);
}

body>footer {
	background-color: var(--color-secondary);
	display: flex;
	padding: var(--s1);
	justify-content: center;
}

body>footer * {
	color: var(--color-background);
	font-family: var(--font-sans-serif);
}

a {
	color: var(--color-secondary);
}

a:hover {
	color: var(--color-accent);
}

main {
	margin: 0 auto;
	padding: var(--s1);
}

.stack {
	display: flex;
	flex-direction: column;
	gap: var(--s1);
}

.row {
	display: flex;
	flex-direction: row;
	gap: var(--s1);
}

hgroup {
	display: flex;
	margin-block: var(--s0);
	flex-direction: column;
	align-items: center;
	line-height: 1;
}

hgroup:first-child {
	font-style: italic;
	text-align: center;
	font-size: var(--s1);
}

hgroup p {
	font-style: normal;
	font-weight: bold;
	color: var(--color-accent);
	font-size: var(--s2);
}

main {
	display: flex;
	flex-wrap: wrap;
	gap: var(--s1);
	width: fit-content;
}

main>aside {
	flex-grow: 1;
	flex-basis: 32ch;
}

main>aside h2 {
	font-size: var(--s0);
}

main>section,
main>article {
	flex-basis: 0;
	flex-grow: 999;
	min-inline-size: 70%;
}

main>section {
	display: flex;
	flex-direction: column;
	gap: var(--s2);
}

main>aside>address {
	display: flex;
	flex-flow: column nowrap;
	gap: var(--s0);
}

.social-links {
	display: flex;
	flex-flow: row wrap;
	gap: var(--s-3);
	align-items: stretch;
}

.button {
	display: inline-block;
	padding: var(--s-2) var(--s-1);
	border: 1px solid;
	border-radius: 4px;
	text-decoration: none;
	font-family: var(--font-sans-serif);
}

.button.basic {
	background-color: var(--color-background);
	color: var(--color-primary);
	border-color: var(--color-primary);
}

.button.basic:hover {
	border-color: transparent;
	color: var(--color-background);
	border-color: var(--color-background);
	background-color: var(--color-primary);
}

.primary {
	background-color: var(--color-background);
	color: var(--color-accent);
	border-color: var(--color-accent);
}

.primary:hover {
	color: var(--color-background);
	border-color: var(--color-background);
	background-color: var(--color-accent);
}

.secondary {
	color: var(--color-background);
	border-color: var(--color-background);
	background-color: var(--color-secondary);
}

.secondary:hover {
	background-color: var(--color-background);
	color: var(--color-secondary);
	border-color: var(--color-secondary);
}


#services li>article {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
}

#services article p {
	color: var(--color-secondary);
}

section article header>* {
	font-weight: 500;
	letter-spacing: var(--s-5);
	text-decoration: underline;
}

section article header:hover>* {
	text-decoration: none;
}

section {
	align-items: stretch;
}

section a {
	text-decoration: none;
	color: var(--color-primary);
}

.grid-4-2-1 {
	display: grid;
	grid-template-columns: 1fr;
	gap: var(--s0);
}

@media screen and (min-width: 80ch) {
	.grid-4-2-1 {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media screen and (min-width: 160ch) {
	.grid-4-2-1 {
		grid-template-columns: repeat(4, 1fr);
	}
}

.grid-3-1 {
	display: grid;
	grid-template-columns: 1fr;
	gap: var(--s0);
}

@media screen and (min-width: 80ch) {
	.grid-3-1 {
		grid-template-columns: repeat(3, 1fr);
	}
}

li>article {
	display: flex;
	gap: var(--s0);
}

li>article a:hover>* {
	color: var(--color-accent);
}

li>article a>* {
	color: var(--color-primary);
}

li>article>section {
	display: flex;
	flex-direction: column;
	gap: var(--s0);
	max-width: var(--line-length);
	gap: var(--s2);
}

#news>ul {
	margin: 0 auto;
	width: fit-content;
}

.post-info {
	align-items: flex-start;
}

hr {
	width: var(--line-length);
	height: 1px;
	color: var(--color-secondary);
}


#post>header {
	display: flex;
	flex-direction: column;
	gap: var(--s-2);
}

main:has(#post) {
	justify-content: center;
}

#post {
	font-family: var(--font-sans-serif);
	max-width: var(--line-length);
	display: flex;
	flex-direction: column;
	gap: var(--s0);
	align-items: center;
}

#post #tags {
	display: flex;
	flex-flow: column;
	gap: var(--s0);
}

#post #tags>ul {
	padding: 0;
	margin: 0;
	display: flex;
	flex-flow: row wrap;
	gap: var(--s0);
}

#post>ul {
	margin-inline-start: var(--s1);
	list-style-type: disc;
	max-width: var(--line-length);
}

#post>ul>li {
	padding-inline-start: var(--s-1);
	margin-block-end: var(--s-2);
}

#ost a:last-of-type {
	align-self: center;
}

